--- a/Antlr_Project/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
+++ b/Antlr_Project/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
@@ -1,5 +1,5 @@
-antlr4.antlrRegisteredTools=4.4@C\:\\Users\\IBK\\AppData\\Local\\Temp\\antlr-4.4-complete.jar\:4.13.2@C\:\\Users\\IBK\\eclipse-workspace\\Antlr_Project\\lib\\antlr-4.13.2-complete.jar
-antlr4.antlrToolPath=C\:\\Users\\IBK\\eclipse-workspace\\Antlr_Project\\lib\\antlr-4.13.2-complete.jar
+antlr4.antlrRegisteredTools=4.4@C\:\\Users\\IBK\\AppData\\Local\\Temp\\antlr-4.4-complete.jar\:4.13.2@C\:\\Users\\IBK\\git\\antlrProject\\Antlr_Project\\lib\\antlr-4.13.2-complete.jar
+antlr4.antlrToolPath=C\:\\Users\\IBK\\git\\antlrProject\\Antlr_Project\\lib\\antlr-4.13.2-complete.jar
 antlr4.encoding=UTF-8
 antlr4.listener=true
 antlr4.visitor=false
