--- a/Antlr_Project/.gitignore
+++ b/Antlr_Project/.gitignore
@@ -1,4 +1,7 @@
 /build/
+/data/
+/files/
+/config/
 
 # Compiled class file
 *.class
@@ -19,7 +22,16 @@
 *.zip
 *.tar.gz
 *.rar
+*.7z
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# excel file
+*.xls
+*.xlsx
+
+# config file
+.config
+.properties
