- 복잡합 소스명 정리 - config 파일 추가

--- a/Antlr_Project/.gitignore
+++ b/Antlr_Project/.gitignore
@@ -1,7 +1,6 @@
 /build/
 /data/
 /files/
-/config/
 
 # Compiled class file
 *.class
@@ -34,4 +33,4 @@ replay_pid*
 
 # config file
 .config
-.properties
+#.properties
