--- a/Antlr_Project/config/main.properties
+++ b/Antlr_Project/config/main.properties
@@ -2,8 +2,11 @@
 ## Common Variable List
 ################################################
 
-# Source File Folder
-FILE_PATH=/files/
+# Source Old File Folder
+OLD_FILE_PATH=/files/src_old/
+
+# Source New File Folder
+NEW_FILE_PATH=/files/src_new/
 
 # Excel File Folder
 EXCEL_FILE_PATH=/data/
@@ -15,4 +18,4 @@ EXCEL_START_LINE=6
 EXCEL_END_LINE=40291
 
 # File create Yes/No
-CREATE_FILE_YN=N
+CREATE_FILE_YN=Y
